--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3expan.dtx Copyright (C) 1990-2015 The LaTeX3 project
+%% File: l3expan.dtx Copyright (C) 1990-2016 The LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -105,10 +105,10 @@
 % how the variants are defined. They just expand into the appropriate
 % |\exp_| function followed by the desired base function, \emph{e.g.}
 % \begin{quote}
-%   |\cs_new_nopar:Npn \seq_gpush:No { \exp_args:NNo \seq_gpush:Nn }|
+%   |\cs_new:Npn \seq_gpush:No { \exp_args:NNo \seq_gpush:Nn }|
 % \end{quote}
 % Providing variants in this way in style files is uncritical as the
-% \cs{cs_new_nopar:Npn} function will silently accept definitions whenever the
+% \cs{cs_new:Npn} function will silently accept definitions whenever the
 % new definition is identical to an already given one. Therefore adding
 % such definition to later releases of the kernel will not make such
 % style files obsolete.
@@ -755,7 +755,7 @@
 %
 % \begin{function}{\::n, \::N, \::p, \::c, \::o, \::f, \::x, \::v, \::V, \:::}
 %   \begin{syntax}
-%     |\cs_set_nopar:Npn \exp_args:Ncof { \::c \::o \::f \::: }|
+%     |\cs_set:Npn \exp_args:Ncof { \::c \::o \::f \::: }|
 %   \end{syntax}
 %   Internal forms for the base expansion types. These names do \emph{not}
 %   conform to the general \LaTeX3 approach as this makes them more readily
@@ -789,7 +789,7 @@
 % In this section a general mechanism for defining functions to handle
 % argument handling is defined.  These general expansion functions are
 % expandable unless |x| is used.  (Any version of |x| is going to have
-% to use one of the \LaTeX3 names for \cs{cs_set_nopar:Npx} at some
+% to use one of the \LaTeX3 names for \cs{cs_set:Npx} at some
 % point, and so is never going to be expandable.)
 %
 % The definition of expansion functions with this technique happens
@@ -1180,7 +1180,7 @@
 %
 % \begin{macro}{\exp_args:Nx}
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \exp_args:Nx { \::x \::: }
+\cs_new_protected:Npn \exp_args:Nx { \::x \::: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1198,21 +1198,21 @@
 %   Here are the actual function definitions, using the helper functions
 %   above.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \exp_args:Nnc { \::n \::c \::: }
-\cs_new_nopar:Npn \exp_args:Nfo { \::f \::o \::: }
-\cs_new_nopar:Npn \exp_args:Nff { \::f \::f \::: }
-\cs_new_nopar:Npn \exp_args:Nnf { \::n \::f \::: }
-\cs_new_nopar:Npn \exp_args:Nno { \::n \::o \::: }
-\cs_new_nopar:Npn \exp_args:NnV { \::n \::V \::: }
-\cs_new_nopar:Npn \exp_args:Noo { \::o \::o \::: }
-\cs_new_nopar:Npn \exp_args:Nof { \::o \::f \::: }
-\cs_new_nopar:Npn \exp_args:Noc { \::o \::c \::: }
-\cs_new_protected_nopar:Npn \exp_args:NNx { \::N \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Ncx { \::c \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nnx { \::n \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nox { \::o \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nxo { \::x \::o \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nxx { \::x \::x \::: }
+\cs_new:Npn \exp_args:Nnc { \::n \::c \::: }
+\cs_new:Npn \exp_args:Nfo { \::f \::o \::: }
+\cs_new:Npn \exp_args:Nff { \::f \::f \::: }
+\cs_new:Npn \exp_args:Nnf { \::n \::f \::: }
+\cs_new:Npn \exp_args:Nno { \::n \::o \::: }
+\cs_new:Npn \exp_args:NnV { \::n \::V \::: }
+\cs_new:Npn \exp_args:Noo { \::o \::o \::: }
+\cs_new:Npn \exp_args:Nof { \::o \::f \::: }
+\cs_new:Npn \exp_args:Noc { \::o \::c \::: }
+\cs_new_protected:Npn \exp_args:NNx { \::N \::x \::: }
+\cs_new_protected:Npn \exp_args:Ncx { \::c \::x \::: }
+\cs_new_protected:Npn \exp_args:Nnx { \::n \::x \::: }
+\cs_new_protected:Npn \exp_args:Nox { \::o \::x \::: }
+\cs_new_protected:Npn \exp_args:Nxo { \::x \::o \::: }
+\cs_new_protected:Npn \exp_args:Nxx { \::x \::x \::: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1229,19 +1229,19 @@
 %     \exp_args:Nccx, \exp_args:Ncnx, \exp_args:Noox,
 %   }
 %    \begin{macrocode}
-\cs_new_nopar:Npn \exp_args:NNno { \::N \::n \::o \::: }
-\cs_new_nopar:Npn \exp_args:NNoo { \::N \::o \::o \::: }
-\cs_new_nopar:Npn \exp_args:Nnnc { \::n \::n \::c \::: }
-\cs_new_nopar:Npn \exp_args:Nnno { \::n \::n \::o \::: }
-\cs_new_nopar:Npn \exp_args:Nooo { \::o \::o \::o \::: }
-\cs_new_protected_nopar:Npn \exp_args:NNNx { \::N \::N \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:NNnx { \::N \::n \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:NNox { \::N \::o \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nnnx { \::n \::n \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nnox { \::n \::o \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Nccx { \::c \::c \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Ncnx { \::c \::n \::x \::: }
-\cs_new_protected_nopar:Npn \exp_args:Noox { \::o \::o \::x \::: }
+\cs_new:Npn \exp_args:NNno { \::N \::n \::o \::: }
+\cs_new:Npn \exp_args:NNoo { \::N \::o \::o \::: }
+\cs_new:Npn \exp_args:Nnnc { \::n \::n \::c \::: }
+\cs_new:Npn \exp_args:Nnno { \::n \::n \::o \::: }
+\cs_new:Npn \exp_args:Nooo { \::o \::o \::o \::: }
+\cs_new_protected:Npn \exp_args:NNNx { \::N \::N \::x \::: }
+\cs_new_protected:Npn \exp_args:NNnx { \::N \::n \::x \::: }
+\cs_new_protected:Npn \exp_args:NNox { \::N \::o \::x \::: }
+\cs_new_protected:Npn \exp_args:Nnnx { \::n \::n \::x \::: }
+\cs_new_protected:Npn \exp_args:Nnox { \::n \::o \::x \::: }
+\cs_new_protected:Npn \exp_args:Nccx { \::c \::c \::x \::: }
+\cs_new_protected:Npn \exp_args:Ncnx { \::c \::n \::x \::: }
+\cs_new_protected:Npn \exp_args:Noox { \::o \::o \::x \::: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1338,11 +1338,11 @@
   }
 \cs_new:Npn \exp_last_unbraced:NNNo #1#2#3#4
   { \exp_after:wN #1 \exp_after:wN #2 \exp_after:wN #3 #4 }
-\cs_new_nopar:Npn \exp_last_unbraced:Nno { \::n \::o_unbraced \::: }
-\cs_new_nopar:Npn \exp_last_unbraced:Noo { \::o \::o_unbraced \::: }
-\cs_new_nopar:Npn \exp_last_unbraced:Nfo { \::f \::o_unbraced \::: }
-\cs_new_nopar:Npn \exp_last_unbraced:NnNo { \::n \::N \::o_unbraced \::: }
-\cs_new_protected_nopar:Npn \exp_last_unbraced:Nx { \::x_unbraced \::: }
+\cs_new:Npn \exp_last_unbraced:Nno { \::n \::o_unbraced \::: }
+\cs_new:Npn \exp_last_unbraced:Noo { \::o \::o_unbraced \::: }
+\cs_new:Npn \exp_last_unbraced:Nfo { \::f \::o_unbraced \::: }
+\cs_new:Npn \exp_last_unbraced:NnNo { \::n \::N \::o_unbraced \::: }
+\cs_new_protected:Npn \exp_last_unbraced:Nx { \::x_unbraced \::: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1485,7 +1485,7 @@
 %   \end{arguments}
 %   After making sure that the base form exists, test whether it is
 %   protected or not and define \cs{@@_tmp:w} as either
-%   \cs{cs_new_nopar:Npx} or \cs{cs_new_protected_nopar:Npx}, which is
+%   \cs{cs_new:Npx} or \cs{cs_new_protected:Npx}, which is
 %   then used to define all the variants (except those involving
 %   \texttt{x}-expansion, always protected).  Split up the original base
 %   function only once, to grab its name and signature.  Then we wish to
@@ -1526,21 +1526,21 @@
 %   |\bot|, |\splittop|, or |\splitbot|, with |\| replaced by the
 %   appropriate escape character.  If |pr| appears in the part before
 %   |ma|, the first \cs{q_mark} is taken as an argument of the |wwNw|
-%   auxiliary, and |#3| is \cs{cs_new_protected_nopar:Npx}, otherwise it
-%   is \cs{cs_new_nopar:Npx}.
+%   auxiliary, and |#3| is \cs{cs_new_protected:Npx}, otherwise it
+%   is \cs{cs_new:Npx}.
 %    \begin{macrocode}
 \cs_new_protected:Npx \@@_generate_variant:N #1
   {
     \exp_not:N \exp_after:wN \exp_not:N \if_meaning:w
       \exp_not:N \exp_not:N #1 #1
-      \cs_set_eq:NN \exp_not:N \@@_tmp:w \cs_new_protected_nopar:Npx
+      \cs_set_eq:NN \exp_not:N \@@_tmp:w \cs_new_protected:Npx
     \exp_not:N \else:
       \exp_not:N \exp_after:wN \exp_not:N \@@_generate_variant:ww
         \exp_not:N \token_to_meaning:N #1 \tl_to_str:n { ma }
           \exp_not:N \q_mark
-        \exp_not:N \q_mark \cs_new_protected_nopar:Npx
+        \exp_not:N \q_mark \cs_new_protected:Npx
         \tl_to_str:n { pr }
-        \exp_not:N \q_mark \cs_new_nopar:Npx
+        \exp_not:N \q_mark \cs_new:Npx
         \exp_not:N \q_stop
     \exp_not:N \fi:
   }
@@ -1800,7 +1800,7 @@
 %   If the variant form has already been defined, log its existence.
 %   Otherwise, make sure that the |\exp_args:N #3| form is defined, and
 %   if it contains |x|, change \cs{@@_tmp:w} locally to
-%   \cs{cs_new_protected_nopar:Npx}.  Then define the variant by
+%   \cs{cs_new_protected:Npx}.  Then define the variant by
 %   combining the |\exp_args:N #3| variant and the base function.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_generate_variant:wwNN
@@ -1839,11 +1839,11 @@
   {
     \exp_not:N \@@_generate_internal_variant:wwnNwnn
       #1 \exp_not:N \q_mark
-        { \cs_set_eq:NN \exp_not:N \@@_tmp:w \cs_new_protected_nopar:Npx }
-        \cs_new_protected_nopar:cpx
+        { \cs_set_eq:NN \exp_not:N \@@_tmp:w \cs_new_protected:Npx }
+        \cs_new_protected:cpx
       \token_to_str:N x \exp_not:N \q_mark
         { }
-        \cs_new_nopar:cpx
+        \cs_new:cpx
     \exp_not:N \q_stop
       { exp_args:N #1 }
       {
