Tweak code comment of c_zero_dim: nothing special about package mode [ci skip]

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1507,7 +1507,7 @@
 % \subsection{Constant dimensions}
 %
 % \begin{variable}{\c_zero_dim, \c_max_dim}
-%   Constant dimensions: in package mode, a couple of registers can be saved.
+%   Constant dimensions.
 %    \begin{macrocode}
 \dim_const:Nn \c_zero_dim { 0 pt }
 \dim_const:Nn \c_max_dim { 16383.99999 pt }
