--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -773,8 +773,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \kern_horizontal:n #1
   {
-    \mode_if_vertical:T
-      { \xbox_leave_vmode: }
+    \xbox_leave_vmode:
     \tex_kern:D \__dim_eval:w #1 \__dim_eval_end:
   }
 \cs_new_protected:Npn \kern_vertical:n #1
