Remove some pointless "^^A" (l3doc was fixed some time back)
The comment character "^^A" used to be needed in some places to prevent 
l3doc from breaking.  As far as I can tell, this is fixed (while I don't 
remember the bug I remember fixing it), and typesetting works fine.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -968,7 +968,7 @@
 % \begin{macro}[aux]{\@@_draw_dash:n}
 % \begin{macro}[int]{\@@_draw_linewidth:n}
 % \begin{macro}[int]{\@@_draw_miterlimit:n}
-% \begin{macro}[int]^^A
+% \begin{macro}[int]
 %   {
 %     \@@_draw_cap_butt:, \@@_draw_cap_round:, \@@_draw_cap_rectangle:,
 %     \@@_draw_join_miter:, \@@_draw_join_round:, \@@_draw_join_bevel:
@@ -1547,7 +1547,7 @@
 % \begin{macro}[aux]{\@@_draw_dash:n}
 % \begin{macro}[int]{\@@_draw_linewidth:n}
 % \begin{macro}[int]{\@@_draw_miterlimit:n}
-% \begin{macro}[int]^^A
+% \begin{macro}[int]
 %   {
 %     \@@_draw_cap_butt:, \@@_draw_cap_round:, \@@_draw_cap_rectangle:,
 %     \@@_draw_join_miter:, \@@_draw_join_round:, \@@_draw_join_bevel:
@@ -2197,7 +2197,7 @@
 % \begin{macro}[aux]{\@@_draw_dash_aux:nn}
 % \begin{macro}[int]{\@@_draw_linewidth:n}
 % \begin{macro}[int]{\@@_draw_miterlimit:n}
-% \begin{macro}[int]^^A
+% \begin{macro}[int]
 %   {
 %     \@@_draw_cap_butt:, \@@_draw_cap_round:, \@@_draw_cap_rectangle:,
 %     \@@_draw_join_miter:, \@@_draw_join_round:, \@@_draw_join_bevel:
