--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -301,7 +301,7 @@
 %   \begin{texnote}
 %     The \TeX{} \tn{endinput} primitive is used to exit the file.  In
 %     particular, the rest of the current line remains in the input
-%     stream. ^^A Can we fix that?
+%     stream.
 %   \end{texnote}
 % \end{function}
 %
