Special-case \protect in case-changing code
In package mode, \protect \foo now prevents the expansion of \foo 
normally done by the case-changing code.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3018,6 +3018,7 @@
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:N}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:NN}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:NNn}
+% \begin{macro}[aux, EXP]{\@@_change_case_protect:wNN}
 % \begin{macro}[aux, EXP]{\@@_change_case_if_expandable:NTF}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs_expand:Nnw}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs_expand:NN}
@@ -3339,10 +3340,15 @@
 %   on the list which indicate that case changing should be skipped. That's
 %   done using a loop as for the other special cases. If a hit is found then
 %   the argument is grabbed: that comes \emph{after} the loop function which
-%   is therefore rearranged.
+%   is therefore rearranged.  In a \LaTeXe{} context, \tn{protect} needs
+%   to be treated specially, to prevent expansion of the next token but
+%   output it without braces.
 %    \begin{macrocode}
 \cs_new:Npn \@@_change_case_cs:N #1
   {
+%<*package>
+    \str_if_eq:nnTF {#1} { \protect } { \@@_change_case_protect:wNN }
+%</package>
     \exp_after:wN \@@_change_case_cs:NN
       \exp_after:wN #1 \l_tl_case_change_exclude_tl
       \q_recursion_tail \q_recursion_stop
@@ -3366,6 +3372,10 @@
     \@@_change_case_output:nwn { #1 {#3} }
     #2
   }
+%<*package>
+\cs_new:Npn \@@_change_case_protect:wNN #1 \q_recursion_stop #2 #3
+  { \@@_change_case_output:nwn { \protect #3 } #2 }
+%</package>
 %    \end{macrocode}
 %   When a control sequence is not on the exclude list the other test if
 %   to see if it is expandable. Once again, if there is a hit then the loop
@@ -3399,6 +3409,7 @@
 \cs_new:Npn \@@_change_case_cs_expand:NN #1#2
   { \exp_after:wN #2 #1 }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
